ajustes about page and index

--- a/about.html
+++ b/about.html
@@ -169,12 +169,13 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="text">
-                    <p><span>Our company history</span> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>    
+                    <p> Baseada  nos 3 pilares  <span>(Análise, Gerenciamento e Emocional) </span>  denominados os “pilares de ouro”, a <span>Focus Protrading</span>  vem reformulando o conceito de ganhar dinheiro no mercado financeiro, transformando a vida de pessoas comuns através do conhecimento e da execução.
+</p>    
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="mission text">
-                    <p><span>Our company history</span> many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything</p>
+                    <p>A <span>Focus Protrading</span> é uma referência no mercado de Opções Binárias e Digitais. É responsável por desenvolver estratégias, as mais simples e lucrativas do mercado financeiro, que fazem lucrar muitos dos nossos estudantes.</p>
                 </div>
             </div>
         </div>
