--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     data-responsive_offset="on"
                     data-start="700">
                     <div class="slide-content-box mar-lft">
-                        <h1>SEJA BEM VINDO A  <br> FOCUS TRADING</h1>
+                        <h1>SEJA BEM VINDO A  <br> FOCUS PROTRADING</h1>
                     </div>
                 </div>
                 <div class="tp-caption  tp-resizeme" 
@@ -162,7 +162,7 @@
                     data-responsive_offset="on"
                     data-start="2000">
                     <div class="slide-content-box mar-lft">
-                        <p>Com a FOCUS Trading<br> Você está a 1 passo da sua consistência.</p>
+                        <p>Com a Focus Protrading<br> Você está a 1 passo da sua consistência.</p>
                     </div>
                 </div>
                 <div class="tp-caption tp-resizeme" 
@@ -276,7 +276,7 @@
                     </div>
                     <div class="content">
                         <h3>LUCRATIVIDADE</h3>
-                        <p>Torne-se altamente lucrativo com conhecimentos sólidos oferecidos pela Focus Trading</p>
+                        <p>Torne-se altamente lucrativo com conhecimentos sólidos oferecidos pela Focus Protrading</p>
                     </div>
                 </div>
             </div>
@@ -313,7 +313,7 @@
                     <h1><span>Quem <b>Somos</b></span></h1>
                 </div>
                 <div class="text">
-                    <p>Focus Trading é uma empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. Oferecemos os melhores treinamentos e melhores materiais. </p>
+                    <p>A Focus Protrading é uma empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. Oferecemos os melhores treinamentos e melhores materiais. </p>
                 </div>
                 <div class="bottom">
                     <a class="readmore thm-btn bgclr-1" href="about.html">Mais detalhes</a>
@@ -444,8 +444,8 @@
 <section class="choosing-area">
     <div class="container">
         <div class="sec-title text-center">
-            <h1><span>Porquê a  <b>FOCUS Trading</b></span></h1>
-            <p>A FOCUS Trading reúne uma equipe preparada e bem empenhada com o propósito de garantir que os seus alunos tenham o melhor material do mercado, os alunos recebem manuais para o acompanhamento das aulas.</p>
+            <h1><span>Porquê a  <b>Focus Protrading</b></span></h1>
+            <p>A Focus Protrading reúne uma equipe preparada e bem empenhada com o propósito de garantir que os seus alunos tenham o melhor material do mercado, os alunos recebem manuais para o acompanhamento das aulas.</p>
         </div>
         <div class="row">
             <!--Start single industry expertise item-->
@@ -702,7 +702,7 @@
                         <h3>quem somos</h3>
                     </div>
                     <div class="about-us">
-                        <p>Focus trading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. .</p>
+                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. .</p>
                         <ul class="footer-social-links">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
