--- a/serv_ga.html
+++ b/serv_ga.html
@@ -168,9 +168,9 @@
                         <h1><span>Sistema de <b>Gerenciamento</b></span></h1>
                     </div>
                     <div class="text">
-                        <p>We have constructed an advantageous notoriety in the shopper merchandise, substantial industry, innovative, producing, therapeutic, recreational vehicle, and transportation parts. multidisciplinary group of designing specialists, who adores or seeks after or wants to get agony of itself, since it is torment sometimes.</p>
+                        <p>O gerenciamento de risco faz parte da rotina de quem atua no mercado financeiro, é fundamental se planejar e tentar reduzir ao máximo as possibilidades de perda de capital. O gerenciamento de risco é um conceito-chave que todos os traders iniciantes até mesmo traders com alguma experiência no mercado devem entender e aprender a aplicar. Nesse contexto a Focus Protrandig disponibiliza o GrowApp, que é um sistema integrado de gerenciamento de capital que será aliado de qualquer trader que deseja melhor organização, gestão e análise dos seus resultados</p>
                         <h3>Gerenciamentos</h3>
-                        <p>These days are all share them with me oh baby. Now the world don't move to the beat of just one drum. What might be right for you may not be right for some. And you know where you were then.</p>
+                        <p>Fazem parte do GrowApp os seguintes gerenciamemntos:</p>
                     </div>
                     <ul>
                         <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Mão Fixa</li>
