--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     </ul>
                     <div class="header-social-links">
                         <ul class="social-links">
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                         </ul>  
                     </div>
                 </div>
@@ -296,7 +296,7 @@
                     <a class="tool_tip" title="Opções binárias" href="#">
                         <div class="single-item">
                             <div class="inner-box">
-                               <a href="https://ib.iqbroker.com/redir/?aff=213718"> <img src="images/logo/f187618d1.png" alt="Awesome Brand Image"> </a>
+                               <a target="_blank" href="https://ib.iqbroker.com/redir/?aff=213718"> <img src="images/logo/f187618d1.png" alt="Awesome Brand Image"> </a>
                             </div>
                         </div>
                     </a>
@@ -305,35 +305,7 @@
                     <a class="tool_tip" title="Media Partner" href="#">
                         <div class="single-item">
                            <div class="inner-box">
-                               <a href="https://binomo.com?a=435f53e16207&ac=FOCUSTrading"><img src="https://a.binpartner.com/uploads/b/1544707144_file_6691c0cd.jpg" /></a>
-                            </div>
-                        </div>
-                    </a>
-                    <!--End single item-->
-                    <!--Start single item-->
-                    <a class="tool_tip" title="Media Partner" href="#">
-                        <div class="single-item">
-                            <div class="inner-box">
-                                <img src="images/brand/3.png" alt="Awesome Brand Image">
-                            </div>    
-                        </div>
-                    </a>
-                    <!--End single item-->
-                    <!--Start single item-->
-                    <a class="tool_tip" title="Media Partner" href="#">
-                        <div class="single-item" title="Media Partner">
-                            <div class="inner-box">
-                                <img src="images/brand/4.png" alt="Awesome Brand Image">
-                            </div>
-                        </div>
-                    </a>
-                  
-                    <!--End single item-->
-                    <!--Start single item-->
-                    <a class="tool_tip" title="Media Partner" href="#">
-                        <div class="single-item">
-                            <div class="inner-box">
-                                <img src="images/brand/5.png" alt="Awesome Brand Image">
+                               <a target="_blank" href="https://binomo.com?a=435f53e16207&ac=FOCUSTrading"><img src="https://a.binpartner.com/uploads/b/1544707144_file_6691c0cd.jpg" /></a>
                             </div>
                         </div>
                     </a>
