--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                     </ul>
                     <div class="header-social-links">
                         <ul class="social-links">
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                             <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                         </ul>  
                     </div>
                 </div>
@@ -138,17 +138,6 @@
 	        </div>
 	    </div>
 	</div>
-    <div class="breadcrumb-botton">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <ul class="left pull-left">
-                        <li class="active">Contacte-nos</li>
-                    </ul>   
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 <!--End breadcrumb area--> 
 
@@ -156,7 +145,7 @@
 <section class="contact-form-area">
     <div class="container">
         <div class="sec-title">
-            <h1><span>Entre em contacto <b>Conosco</b></span></h1>
+            <h1><span>Entre em contacto <b>Connosco</b></span></h1>
             <span class="border"></span>
         </div>
         <div class="row">
@@ -227,7 +216,7 @@
                         </li>
                     </ul>
                     <ul class="social-links">
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                     </ul>
                 </div>    
             </div>
