--- a/serv_ob.html
+++ b/serv_ob.html
@@ -63,7 +63,7 @@
                         </ul>
                         <div class="header-social-links">
                            <ul class="social-links">
-                              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                              <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                            </ul>
                         </div>
                      </div>
@@ -91,13 +91,6 @@
                               <li><a href="index.html">Início</a></li>
                               <li class="dropdown">
                                  <a href="about.html">Quem somos</a>
-                                 <ul>
-                                    <li><a href="about.html">About Company</a></li>
-                                    <li><a href="team.html">Our Team</a></li>
-                                    <li><a href="testimonials.html">Testimonials</a></li>
-                                    <li><a href="faq.html">FAQ’s</a></li>
-                                    <li><a href="404.html">404 Page</a></li>
-                                 </ul>
                               </li>
                               <li class="dropdown current">
                                  <a href="services.html">Serviços</a>
@@ -127,17 +120,6 @@
                   </div>
                </div>
             </div>
-            <div class="breadcrumb-botton">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-md-12">
-                        <ul class="left pull-left">
-                           <li class="active">Opções Binárias</li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-            </div>
          </section>
          <!--End breadcrumb area--> 
          <!--Start services details area-->
@@ -147,7 +129,7 @@
                   <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
                      <div class="content">
                         <div class="img-holder">
-                           <img src="images/imgs/BB.jpeg" alt="Awesome Image">
+                           <img src="images/imgs/2481595.jpg" alt="Awesome Image">
                         </div>
                      </div>
                   </div>
@@ -164,8 +146,6 @@
                               <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Assertividade</li>
                               <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Análise do gráfico</li>
                               <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Análise da psicologia de candles</li>
-                              <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Raciocínio lógico</li>
-                              <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Raciocínio crítico</li>
                            </ul>
                         </div>
                      </div>
@@ -394,7 +374,7 @@
                      </div>
                      <div class="pricing-plans">
                         <span class="price-value"><i class="fa fa-usd"></i><span> 0</span></span>
-                        <span class="subtitle">Lorem ipsum dolor</span>
+                        <!--span class="subtitle">Lorem ipsum dolor</span-->
                      </div>
                      <div class="pricingContent">
                         <ul class="pricing-content">
@@ -424,8 +404,8 @@
                         </span>
                      </div>
                      <div class="pricing-plans">
-                        <span class="price-value"><i class="fa fa-usd"></i><span> 59</span></span>
-                        <span class="subtitle">Lorem ipsum dolor</span>
+                        <span class="price-value"><i class="fa fa-usd"></i><span> #</span></span>
+                        <!--span class="subtitle">Lorem ipsum dolor</span-->
                      </div>
                      <div class="pricingContent">
                         <ul class="pricing-content">
@@ -459,8 +439,8 @@
                         </span>
                      </div>
                      <div class="pricing-plans">
-                        <span class="price-value"><i class="fa fa-usd"></i><span> 269</span></span>
-                        <span class="subtitle">Lorem ipsum dolor</span>
+                        <span class="price-value"><i class="fa fa-usd"></i><span> #</span></span>
+                       <!--span class="subtitle">Lorem ipsum dolor</span-->
                      </div>
                      <div class="pricingContent">
                         <ul class="pricing-content">
