--- a/serv_ga.html
+++ b/serv_ga.html
@@ -70,7 +70,7 @@
                         </ul>
                         <div class="header-social-links">
                            <ul class="social-links">
-                              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                              <li><a target="_blank" href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                            </ul>
                         </div>
                      </div>
@@ -119,7 +119,7 @@
          <!--End mainmenu area--> 
 
 <!--Start breadcrumb area-->     
-<section class="breadcrumb-area" style="background-image: url(images/imgs/pexels-joslyn-pickens-3833052.jpg);">
+<section class="breadcrumb-area" style="background-image: url(images/imgs/gabg.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -133,12 +133,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <ul class="left pull-left">
-                        <li class="active">GROWAPP</li>
-                    </ul>
-                    <div class="share-button pull-right">
-                        <a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Entrar</a>    
-                    </div>    
+                    <ul class="left pull-right">
+                        <li class="active"> <a target="_blank" href="http://growapp.focus.co.mz/" style="color: white;"><i class="fa fa-sign-in" aria-hidden="true"></i>  Entrar</a>  </li>
+                    </ul>   
                 </div>
             </div>
         </div>
@@ -150,18 +147,13 @@
 <section class="success-story-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-12">
-                <div class="video-holder">
-                    <img src="images/about/video-gallery-img.jpg" alt="Awesome Video Gallery">
-                    <div class="overlay-gallery">
-                        <div class="icon-holder">
-                            <div class="icon">
-                                <a class="html5lightbox" title="Trade Video Gallery" href="https://www.youtube.com/watch?v=hsRRMaX_neg"><img src="images/icon/play-btn.png" alt="Play Button"></a>   
-                            </div>
-                        </div>    
-                    </div>
-                </div>
-            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                     <div class="content">
+                        <div class="img-holder">
+                           <img src="images/imgs/pexels-joslyn-pickens-3833052.jpg" alt="Awesome Image">
+                        </div>
+                     </div>
+                  </div>
             <div class="col-lg-6 col-md-12">
                 <div class="text-holder">
                     <div class="sec-title">
@@ -173,9 +165,18 @@
                         <p>Fazem parte do GrowApp os seguintes gerenciamemntos:</p>
                     </div>
                     <ul>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Mão Fixa</li>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Composto</li>
-                        <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Winner</li>
+                    	<div class="row">
+                    		<div class="col-lg-4">
+                    			<li><i class="fa fa-check-square-o" aria-hidden="true"></i>Mão Fixa</li>
+                    		</div>
+                    		<div class="col-lg-4">
+                    			 <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Composto</li>
+                    		</div>
+                    		<div class="col-lg-4">
+                    			 <li><i class="fa fa-check-square-o" aria-hidden="true"></i>Winner</li>
+                    		</div>
+                    		
+                    	</div>
                     </ul>
                 </div>   
             </div>
