--- a/about.html
+++ b/about.html
@@ -136,11 +136,18 @@
 <section class="success-story-area">
     <div class="container">
         <div class="row">
-           <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-            <div class="who-we-are-img-holder">
-                <img src="images/logo/logo_transparent_background copy.png" style="position: relative; right: 20%; width: 100%; height: 100%;" alt="Awesome Image">
+           <div class="col-lg-6 col-md-12">
+                <div class="video-holder">
+                    <img src="images/logo/logo_transparent_backgroun.png" alt="Awesome Video Gallery" width="50" height="50">
+                    <div class="overlay-gallery">
+                        <div class="icon-holder">
+                            <div class="icon">
+                                <a class="html5lightbox" title="Trade Video Gallery" href="https://www.youtube.com/watch?v=5AMNpQnYMnQ"><img src="images/icon/play-btn.png" alt="Play Button"></a>   
+                            </div>
+                        </div>    
+                    </div>
+                </div>
             </div>
-        </div>
             <div class="col-lg-6 col-md-12">
                 <div class="text-holder">
                     <div class="sec-title">
@@ -257,7 +264,6 @@
             <div class="col-md-12">
                 <div class="inner-content text-center wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                     <h1>Todos têm a capacidade de escolher a vida que querem mas uns decidem deixar pra depois</h1>
-                    <a class="thm-btn bgclr-1" href="#">Deixe um depoimento</a>
                 </div>
             </div>
         </div>
