--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                     <div class="overlay-gallery">
                         <div class="icon-holder">
                             <div class="icon">
-                                <a class="html5lightbox" title="Trade Video Gallery" href="https://www.youtube.com/watch?v=5AMNpQnYMnQ"><img src="images/icon/play-btn.png" alt="Play Button"></a>   
+                                <a class="html5lightbox" title="Quem somos" href="https://www.youtube.com/watch?v=5AMNpQnYMnQ"><img src="images/icon/play-btn.png" alt="Play Button"></a>   
                             </div>
                         </div>    
                     </div>
