--- a/serv_ob.html
+++ b/serv_ob.html
@@ -362,14 +362,14 @@
                </div>
             </div>
             <div class="row">
-               <div class="col-md-4 col-sm-6">
+            	 <div class="col-md-3 col-sm-6">
                   <div class="pricingTable">
                      <div class="pricingTable-header">
                         <span class="heading">
                         BO Trading Pro
                         </span>
                         <span class="heading">
-                        Free
+                        Módulo 1
                         </span>
                      </div>
                      <div class="pricing-plans">
@@ -378,9 +378,9 @@
                      </div>
                      <div class="pricingContent">
                         <ul class="pricing-content">
-                           <li>10+ aulas gravadas</li>
+                           <li>5+ aulas gravadas</li>
                            <li>Psicologia de velas</li>
-                           <li>Acesso ao GrowApp por 14 dias</li>
+                           <li>Acesso ao GrowApp por 30 dias</li>
                            <li>Manual de apoio</li>
                            <li>Suporte</li>
                         </ul>
@@ -393,7 +393,38 @@
                      <!-- BUTTON BOX-->
                   </div>
                </div>
-               <div class="col-md-4 col-sm-6">
+               <div class="col-md-3 col-sm-6">
+                  <div class="pricingTable">
+                     <div class="pricingTable-header">
+                        <span class="heading">
+                        BO Trading Pro
+                        </span>
+                        <span class="heading">
+                        Módulo 2
+                        </span>
+                     </div>
+                     <div class="pricing-plans">
+                        <span class="price-value"><i class="fa fa-usd"></i><span> 0</span></span>
+                        <!--span class="subtitle">Lorem ipsum dolor</span-->
+                     </div>
+                     <div class="pricingContent">
+                        <ul class="pricing-content">
+                           <li>5+ aulas gravadas</li>
+                           <li>Psicologia de velas</li>
+                           <li>Acesso ao GrowApp por 30 dias</li>
+                           <li>Manual de apoio</li>
+                           <li>Suporte</li>
+                        </ul>
+                     </div>
+                     <!-- /  CONTENT BOX-->
+                     <div class="pricingTable-sign-up">
+                        <!-- BUTTON BOX-->
+                        <a href="#" class="btn btn-block btn-default">Adquira já!</a>
+                     </div>
+                     <!-- BUTTON BOX-->
+                  </div>
+               </div>
+               <div class="col-md-3 col-sm-6">
                   <div class="pricingTable">
                      <div class="pricingTable-header">
                         <span class="heading">
@@ -428,7 +459,7 @@
                      <!-- BUTTON BOX-->
                   </div>
                </div>
-               <div class="col-md-4 col-sm-6">
+               <div class="col-md-3 col-sm-6">
                   <div class="pricingTable">
                      <div class="pricingTable-header">
                         <span class="heading">
@@ -482,7 +513,7 @@
                         <h2>Nós lhe ajudamos nesta batalha rumo a consistência..</h2>
                      </div>
                      <div class="button pull-right">
-                        <a href="#">Contacte-nos</a>
+                        <a href="contact.html">Contacte-nos</a>
                      </div>
                   </div>
                </div>
