--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <h1><span>Quem <b>Somos</b></span></h1>
                 </div>
                 <div class="text">
-                    <p>A Focus Protrading é uma empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. Oferecemos os melhores treinamentos e melhores materiais. </p>
+                    <p>A Focus Protrading é uma empresa especializada em treinamento para operadores e investidores no mercado financeiro. Atuamos no mercado de opções binárias e ações. Oferecemos os melhores treinamentos e melhores materiais. </p>
                 </div>
                 <div class="bottom">
                     <a class="readmore thm-btn bgclr-1" href="about.html">Mais detalhes</a>
@@ -651,12 +651,9 @@
                         <h3>quem somos</h3>
                     </div>
                     <div class="about-us">
-                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias, acções e Criptomoedas. .</p>
+                        <p>A Focus Protrading é uma Empresa especializada em treinamento para operadores e investidores no mercado financeiro. Actuamos no mercado de opções binárias e ações.</p>
                         <ul class="footer-social-links">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.instagram.com/focus_protrading/"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -666,14 +663,11 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="single-footer-widget marginlft pd-bottom50">
                     <div class="title">
-                        <h3>Usefull Links</h3>
+                         <h3>Links Úteis</h3>
                     </div>
                     <ul class="usefull-links">
-                        <li><a href="ser-financial.html">Sistema de gerenciamento</a></li>
-                        <li><a href="ser-trades-stocks.html">Trades & Stocks</a></li>
-                        <li><a href="ser-strategic-planning.html">Strategic Planning</a></li>
-                        <li><a href="ser-market-analysis.html">Cursos</a></li>
-                        <li><a href="ser-investment.html">Investment</a></li>
+                        <li><a href="serv_ga.html">Sistema de gerenciamento</a></li>
+                        <li><a href="serv_ob.html">Cursos</a></li>
                     </ul>
                 </div>
             </div>
@@ -682,10 +676,10 @@
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="single-footer-widget">
                     <div class="title">
-                        <h3>Latest Projects</h3>
+                        <h3>Últimas actualizações</h3>
                     </div>
                     <ul class="latest-project">
-                        <li>
+                        <!--li>
                             <div class="img-holder">
                                 <img src="images/footer/latest-project/1.jpg" alt="Awesome Image">
                                 <div class="overlay-style-one">
@@ -695,70 +689,8 @@
                                         </div>    
                                     </div>        
                                 </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/latest-project/2.jpg" alt="Awesome Image">
-                                <div class="overlay-style-one">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="projects-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>    
-                                        </div>    
-                                    </div>        
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/latest-project/3.jpg" alt="Awesome Image">
-                                <div class="overlay-style-one">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="projects-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>    
-                                        </div>    
-                                    </div>        
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/latest-project/4.jpg" alt="Awesome Image">
-                                <div class="overlay-style-one">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="projects-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>    
-                                        </div>    
-                                    </div>        
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/latest-project/5.jpg" alt="Awesome Image">
-                                <div class="overlay-style-one">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="projects-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>    
-                                        </div>    
-                                    </div>        
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/latest-project/6.jpg" alt="Awesome Image">
-                                <div class="overlay-style-one">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="projects-single.html"><i class="fa fa-link" aria-hidden="true"></i></a>    
-                                        </div>    
-                                    </div>        
-                                </div>
-                            </div>
-                        </li>
-                         
-                            
+                            </div-->
+                        </li> 
                     </ul>
                 </div>
             </div>
@@ -772,11 +704,11 @@
                     <div class="newsletter-form">
                         <p>Assine nosso boletim informativo, e receba novidades no seu email.</p> 
                         <form action="#">
-                            <input type="email" name="email" placeholder="Email address">
+                            <input type="email" name="email" placeholder="Email">
                             <div class="icon-holder">
                                 <span class="flaticon-envelope"></span>
                             </div>
-                            <button type="submit">Subscribe Us</button>
+                            <button type="submit">Subscrever-se</button>
                         </form>
                     </div>
                 </div>
@@ -787,27 +719,7 @@
 </footer>   
 <!--End footer area-->
 
-<!--Start footer bottom area-->
-<section class="footer-bottom-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12">
-                <div class="copyright-text">
-                    <p>Copyrights © 2017 All Rights Reserved by <a href="#">Trade</a></p>
-                </div>
-            </div>
-            <div class="col-lg-8 col-md-7 col-sm-12 col-xs-12">
-                <ul class="footer-menu">
-                    <li><a href="index.html">Home</a></li>    
-                    <li><a href="services.html">Services</a></li>     
-                    <li><a href="blog.html">Privacy Policies</a></li>      
-                    <li><a href="contact.html">Contact us</a></li>      
-                </ul>      
-            </div>
-        </div>    
-    </div>
-</section>       
-<!--End footer bottom area-->
+
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
