--- a/serv_ob.html
+++ b/serv_ob.html
@@ -362,14 +362,14 @@
                </div>
             </div>
             <div class="row">
-            	 <div class="col-md-3 col-sm-6">
+            	 <div class="col-md-4 col-sm-6">
                   <div class="pricingTable">
                      <div class="pricingTable-header">
                         <span class="heading">
                         BO Trading Pro
                         </span>
                         <span class="heading">
-                        Módulo 1
+                        Free
                         </span>
                      </div>
                      <div class="pricing-plans">
@@ -378,7 +378,7 @@
                      </div>
                      <div class="pricingContent">
                         <ul class="pricing-content">
-                           <li>5+ aulas gravadas</li>
+                           <li>10+ aulas gravadas</li>
                            <li>Psicologia de velas</li>
                            <li>Acesso ao GrowApp por 30 dias</li>
                            <li>Manual de apoio</li>
@@ -388,43 +388,12 @@
                      <!-- /  CONTENT BOX-->
                      <div class="pricingTable-sign-up">
                         <!-- BUTTON BOX-->
-                        <a href="#" class="btn btn-block btn-default">Adquira já!</a>
+                        <a target="_blank" href="https://www.udemy.com/course/day-trading-opcoes-binarias-modulo-i" class="btn btn-block btn-default">Adquira já!</a>
                      </div>
                      <!-- BUTTON BOX-->
                   </div>
                </div>
-               <div class="col-md-3 col-sm-6">
-                  <div class="pricingTable">
-                     <div class="pricingTable-header">
-                        <span class="heading">
-                        BO Trading Pro
-                        </span>
-                        <span class="heading">
-                        Módulo 2
-                        </span>
-                     </div>
-                     <div class="pricing-plans">
-                        <span class="price-value"><i class="fa fa-usd"></i><span> 0</span></span>
-                        <!--span class="subtitle">Lorem ipsum dolor</span-->
-                     </div>
-                     <div class="pricingContent">
-                        <ul class="pricing-content">
-                           <li>5+ aulas gravadas</li>
-                           <li>Psicologia de velas</li>
-                           <li>Acesso ao GrowApp por 30 dias</li>
-                           <li>Manual de apoio</li>
-                           <li>Suporte</li>
-                        </ul>
-                     </div>
-                     <!-- /  CONTENT BOX-->
-                     <div class="pricingTable-sign-up">
-                        <!-- BUTTON BOX-->
-                        <a href="#" class="btn btn-block btn-default">Adquira já!</a>
-                     </div>
-                     <!-- BUTTON BOX-->
-                  </div>
-               </div>
-               <div class="col-md-3 col-sm-6">
+               <div class="col-md-4 col-sm-6">
                   <div class="pricingTable">
                      <div class="pricingTable-header">
                         <span class="heading">
@@ -459,7 +428,7 @@
                      <!-- BUTTON BOX-->
                   </div>
                </div>
-               <div class="col-md-3 col-sm-6">
+               <div class="col-md-4 col-sm-6">
                   <div class="pricingTable">
                      <div class="pricingTable-header">
                         <span class="heading">
